--- a/.eslintrc
+++ b/.eslintrc
@@ -1,23 +1,41 @@
 {
-  "parser": "babel-eslint",
-  "extends": [
-    "standard",
-    "standard-react"
-  ],
-  "env": {
-    "es6": true
-  },
-  "plugins": [
-    "react"
-  ],
+  "extends": ["airbnb", "prettier"],
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
+  "plugins": ["prettier", "react"],
   "rules": {
-    // don't force es6 functions to include space before paren
-    "space-before-function-paren": 0,
-
-    // allow specifying true explicitly for boolean props
-    "react/jsx-boolean-value": 0
+    "prettier/prettier": [
+      "error",
+      {
+        "printWidth": 120,
+        "singleQuote": true,
+        "trailingComma": "all",
+        "arrowParens": "always"
+      }
+    ],
+    "eol-last": ["error", "always"],
+    "import/prefer-default-export": "off",
+    "import/no-unresolved": "off",
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "react/destructuring-assignment": "off",
+    "react/forbid-prop-types": "off",
+    "react/jsx-wrap-multilines": "off",
+    "react/no-unused-prop-types": "off",
+    "react/no-array-index-key": "off",
+    "react/jsx-one-expression-per-line": "off",
+    "react/sort-comp": [
+      2,
+      {
+        "order": ["static-methods", "lifecycle", "everything-else", "render"]
+      }
+    ],
+    "react/prop-types": [2, { "skipUndeclared": true }],
+    "jsx-a11y/click-events-have-key-events": "off",
+    "no-use-before-define": "off",
+    "prefer-destructuring": "off"
   }
 }
