--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "eslint-plugin-react": "^7.12.3",
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
     "react-scripts": "^2.1.3",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
