--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-react": "^7.12.3",
     "eslint-plugin-standard": "^3.1.0",
+    "generate-random-data": "0.0.3",
     "gh-pages": "^1.2.0",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
