--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@dump247/storybook-state": "^1.5.2",
     "@storybook/addon-actions": "^4.1.6",
+    "@storybook/addon-info": "^4.1.11",
     "@storybook/addon-links": "^4.1.6",
     "@storybook/addons": "^4.1.6",
     "@storybook/react": "^4.1.6",
