--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
+    "react-scripts": "^2.1.3",
+    "react-select": "^2.2.0",
+    "react-virtualized": "^9.21.0"
   },
   "devDependencies": {
     "@dump247/storybook-state": "^1.5.2",
@@ -57,13 +60,10 @@
     "eslint-plugin-standard": "^3.1.0",
     "generate-random-data": "0.0.3",
     "gh-pages": "^1.2.0",
-    "react": "^16.8.0-alpha.1",
-    "react-dom": "^16.8.0-alpha.1",
-    "react-scripts": "^2.1.3",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-url": "^1.4.0"
@@ -71,8 +71,5 @@
   "files": [
     "dist"
   ],
-  "dependencies": {
-    "react-select": "^2.2.0",
-    "react-virtualized": "^9.21.0"
-  }
+  "dependencies": {}
 }
