fuck of example use storyook only

--- a/package.json
+++ b/package.json
@@ -71,5 +71,10 @@
   "files": [
     "dist"
   ],
-  "dependencies": {}
+  "dependencies": {
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
+    "react-scripts": "^2.1.3",
+    "react-virtualized": "^9.21.0"
+  }
 }
