--- a/package.json
+++ b/package.json
@@ -21,14 +21,7 @@
     "storybook": "start-storybook -p 9009",
     "build-storybook": "build-storybook"
   },
-  "peerDependencies": {
-    "prop-types": "^15.5.4",
-    "react": "^16.8.0-alpha.1",
-    "react-dom": "^16.8.0-alpha.1",
-    "react-scripts": "^2.1.3",
-    "react-select": "^2.2.0",
-    "react-virtualized": "^9.21.0"
-  },
+  "peerDependencies": {},
   "devDependencies": {
     "@dump247/storybook-state": "^1.5.2",
     "@storybook/addon-actions": "^4.1.6",
@@ -69,5 +62,12 @@
   "files": [
     "dist"
   ],
-  "dependencies": {}
+  "dependencies": {
+    "prop-types": "^15.5.4",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
+    "react-scripts": "^2.1.3",
+    "react-select": "^2.3.0",
+    "react-virtualized": "^9.21.0"
+  }
 }
