--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
     "react-scripts": "^2.1.3",
-    "react-select": "^2.3.0",
+    "react-select": "2.2.0",
     "react-virtualized": "^9.21.0"
   }
 }
