--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@dump247/storybook-state": "^1.5.2",
     "@storybook/addon-actions": "^4.1.11",
     "@storybook/addon-info": "^4.1.11",
     "@storybook/addon-links": "^4.1.11",
@@ -37,6 +36,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "classnames": "^2.2.6",
     "cross-env": "^5.1.4",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
