--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "prop-types": "^15.5.4",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
+    "react-hover-observer": "^2.1.1",
     "react-scripts": "^2.1.3",
     "react-select": "2.2.0",
     "react-virtualized": "^9.21.0"
