--- a/package.json
+++ b/package.json
@@ -56,7 +56,14 @@
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-url": "^1.4.0"
+    "rollup-plugin-url": "^1.4.0",
+    "prop-types": "^15.5.4",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
+    "react-hover-observer": "^2.1.1",
+    "react-scripts": "^2.1.3",
+    "react-select": "2.2.0",
+    "react-virtualized": "^9.21.0"
   },
   "files": [
     "dist"
@@ -68,6 +75,7 @@
     "react-hover-observer": "^2.1.1",
     "react-scripts": "^2.1.3",
     "react-select": "2.2.0",
-    "react-virtualized": "^9.21.0"
+    "react-virtualized": "^9.21.0",
+    "classnames": "^2.2.6"
   }
 }
