--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-select-virtualized",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "react-select v2 + react-virtualized + react hooks",
   "author": "guiyep",
   "license": "MIT",
@@ -12,12 +12,22 @@
     "node": ">=9",
     "npm": ">=6"
   },
+  "keywords": [
+    "react",
+    "select",
+    "virtualized",
+    "hooks",
+    "react hooks",
+    "performance",
+    "big"
+  ],
   "scripts": {
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "build": "rollup -c",
+    "build-prod": "NODE_ENV=production rollup -c",
     "start": "rollup -c -w",
-    "deploy": "gh-pages -d example/build",
+    "deploy": "gh-pages -d",
     "storybook": "start-storybook -p 9009",
     "build-storybook": "build-storybook -c .storybook"
   },
@@ -33,6 +43,7 @@
     "babel-loader": "^7.1.5",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-minify": "^0.5.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "classnames": "^2.2.6",
@@ -50,32 +61,34 @@
     "eslint-plugin-standard": "^3.1.0",
     "generate-random-data": "0.0.3",
     "gh-pages": "^1.2.0",
-    "rollup": "^0.64.1",
-    "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-url": "^1.4.0",
     "prop-types": "^15.5.4",
-    "react": "^16.8.0-alpha.1",
-    "react-dom": "^16.8.0-alpha.1",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "react-hover-observer": "^2.1.1",
     "react-scripts": "^2.1.3",
     "react-select": "2.2.0",
-    "react-virtualized": "^9.21.0"
+    "react-virtualized": "^9.21.0",
+    "rollup": "^1.4.1",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-babel-minify": "^7.0.0",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-url": "^2.2.0"
   },
   "files": [
     "dist"
   ],
   "peerDependencies": {
     "prop-types": "^15.5.4",
-    "react": "^16.8.0-alpha.1",
-    "react-dom": "^16.8.0-alpha.1",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "react-hover-observer": "^2.1.1",
-    "react-scripts": "^2.1.3",
     "react-select": "2.2.0",
     "react-virtualized": "^9.21.0",
     "classnames": "^2.2.6"
-  }
+  },
+  "dependencies": {}
 }
