--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "react-dom": "^16.8.3",
     "react-hover-observer": "^2.1.1",
     "react-virtualized": "^9.21.0",
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "react-select": "2.2.0"
   },
   "dependencies": {}
 }
