--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-select-virtualized",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "react-select v2 + react-virtualized + react hooks",
   "author": "guiyep",
   "license": "MIT",
@@ -25,7 +25,7 @@
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "build": "rollup -c",
-    "build-prod": "NODE_ENV=production rollup -c",
+    "build-prod": "NODE_ENV=production BABEL_ENV=production rollup -c",
     "start": "rollup -c -w",
     "deploy": "gh-pages -d",
     "storybook": "start-storybook -p 9009",
