--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
     "prop-types": "^15.5.4",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-hover-observer": "^2.1.1",
     "react-scripts": "^2.1.3",
     "react-select": "2.2.0",
     "react-virtualized": "^9.21.0",
@@ -91,5 +90,6 @@
     "react-select": "2.2.0"
   },
   "dependencies": {
+    "react-hover-observer": "^2.1.1"
   }
 }
