--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-select-virtualized",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "description": "react-select v2 + react-virtualized + react hooks",
   "author": "guiyep",
   "license": "MIT",
@@ -75,7 +75,8 @@
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-url": "^2.2.0"
+    "rollup-plugin-url": "^2.2.0",
+    "rollup-plugin-gzip": "^2.2.0"
   },
   "files": [
     "dist"
