--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "build-storybook": "build-storybook -c .storybook"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.0.3",
-    "@storybook/addon-info": "^5.0.3",
-    "@storybook/addon-links": "^5.0.3",
-    "@storybook/addons": "^5.0.3",
-    "@storybook/react": "^5.0.3",
+    "@storybook/addon-actions": "^5.1.8",
+    "@storybook/addon-info": "^5.1.8",
+    "@storybook/addon-links": "^5.1.8",
+    "@storybook/addons": "^5.1.8",
+    "@storybook/react": "^5.1.8",
     "@svgr/rollup": "^2.4.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
@@ -48,45 +48,47 @@
     "babel-preset-stage-0": "^6.24.1",
     "classnames": "^2.2.6",
     "cross-env": "^5.1.4",
-    "eslint": "^5.3.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.5.0",
+    "eslint-config-prettier": "^3.6.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-react": "^7.12.3",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "eslint-plugin-standard": "^3.1.0",
+    "extend-shallow": "^3.0.2",
     "generate-random-data": "0.0.3",
     "gh-pages": "^1.2.0",
-    "prop-types": "^15.5.4",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-scripts": "^2.1.3",
-    "react-select": "2.2.0",
-    "react-virtualized": "^9.21.0",
-    "rollup": "^1.4.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "^3.0.1",
+    "react-select": "^2.4.4",
+    "react-virtualized": "^9.21.1",
+    "rollup": "^1.15.6",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-babel-minify": "^7.0.0",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-gzip": "^2.2.0",
+    "rollup-plugin-node-resolve": "^4.2.4",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-url": "^2.2.0",
-    "rollup-plugin-gzip": "^2.2.0"
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-url": "^2.2.2"
   },
   "files": [
     "dist"
   ],
   "peerDependencies": {
-    "prop-types": "^15.5.4",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-hover-observer": "^2.1.1",
-    "react-virtualized": "^9.21.0",
+    "react-virtualized": "^9.21.1",
     "classnames": "^2.2.6",
     "react-select": "2.2.0"
   },
