--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,6 @@
 {
-  "presets": ["stage-0", "react"],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "env": {
-    "modules": false,
     "production": {
       "presets": ["minify"]
     }
