--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-select-virtualized",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "react-select v2 + react-virtualized + react hooks",
   "author": "guiyep",
   "license": "MIT",
@@ -22,8 +22,7 @@
     "big"
   ],
   "scripts": {
-    "test": "cross-env CI=1 react-scripts test --env=jsdom",
-    "test:watch": "react-scripts test --env=jsdom",
+    "test": "jest",
     "build": "rollup -c",
     "build-prod": "NODE_ENV=production BABEL_ENV=production rollup -c",
     "start": "rollup -c -w",
@@ -32,20 +31,20 @@
     "build-storybook": "build-storybook -c .storybook"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
     "@storybook/addon-actions": "^5.1.8",
     "@storybook/addon-info": "^5.1.8",
     "@storybook/addon-links": "^5.1.8",
     "@storybook/addons": "^5.1.8",
     "@storybook/react": "^5.1.8",
     "@svgr/rollup": "^2.4.1",
-    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-loader": "^8.0.6",
     "babel-preset-minify": "^0.5.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "caniuse-lite": "1.0.30000974",
     "classnames": "^2.2.6",
     "cross-env": "^5.1.4",
     "eslint": "^5.16.0",
@@ -63,14 +62,18 @@
     "extend-shallow": "^3.0.2",
     "generate-random-data": "0.0.3",
     "gh-pages": "^1.2.0",
+    "jest": "^24.8.0",
+    "jest-css-modules": "^2.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.0.1",
     "react-select": "^2.4.4",
+    "react-test-renderer": "^16.8.6",
+    "react-testing-library": "^8.0.1",
     "react-virtualized": "^9.21.1",
     "rollup": "^1.15.6",
-    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-babel-minify": "^7.0.0",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-gzip": "^2.2.0",
@@ -83,6 +86,11 @@
   "files": [
     "dist"
   ],
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sss|styl)$": "<rootDir>/node_modules/jest-css-modules"
+    }
+  },
   "peerDependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
