--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-select-virtualized",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "react-select v2 + react-virtualized + react hooks",
   "author": "guiyep",
   "license": "MIT",
@@ -43,6 +43,7 @@
     "@svgr/rollup": "^2.4.1",
     "babel-eslint": "^8.2.5",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-preset-minify": "^0.5.0",
     "caniuse-lite": "1.0.30000974",
     "classnames": "^2.2.6",
@@ -92,7 +93,6 @@
     }
   },
   "peerDependencies": {
-    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hover-observer": "^2.1.1",
