removing addon info for now

--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "@babel/plugin-external-helpers": "^7.2.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "@storybook/addon-actions": "^5.1.8",
-    "@storybook/addon-info": "^5.1.8",
-    "@storybook/addon-links": "^5.1.8",
-    "@storybook/addons": "^5.1.8",
-    "@storybook/react": "^5.1.8",
+    "@storybook/addon-actions": "^5.1.9",
+    "@storybook/addon-info": "^5.1.9",
+    "@storybook/addon-links": "^5.1.9",
+    "@storybook/addons": "^5.1.9",
+    "@storybook/react": "^5.1.9",
     "@svgr/rollup": "^2.4.1",
     "babel-eslint": "^8.2.5",
     "babel-loader": "^8.0.6",
@@ -93,6 +93,7 @@
   },
   "peerDependencies": {
     "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-virtualized": "^9.21.1",
     "react-select": "^2.4.4"
   },
