--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-select-virtualized",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "description": "react-select v3 + react-virtualized + react hooks",
   "author": "guiyep",
   "license": "MIT",
@@ -31,57 +31,57 @@
     "build-storybook": "build-storybook -c .storybook"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@storybook/addon-actions": "^5.1.9",
-    "@storybook/addon-info": "^5.1.9",
-    "@storybook/addon-links": "^5.1.9",
-    "@storybook/addons": "^5.1.9",
-    "@storybook/react": "^5.1.9",
-    "@svgr/rollup": "^2.4.1",
-    "babel-eslint": "^8.2.5",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "babel-preset-minify": "^0.5.0",
+    "@babel/core": "7.4.5",
+    "@babel/plugin-external-helpers": "7.2.0",
+    "@babel/preset-env": "7.4.5",
+    "@babel/preset-react": "7.0.0",
+    "@storybook/addon-actions": "5.1.9",
+    "@storybook/addon-info": "5.1.9",
+    "@storybook/addon-links": "5.1.9",
+    "@storybook/addons": "5.1.9",
+    "@storybook/react": "5.1.9",
+    "@svgr/rollup": "2.4.1",
+    "babel-eslint": "8.2.5",
+    "babel-loader": "8.0.6",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.24",
+    "babel-preset-minify": "0.5.0",
     "caniuse-lite": "1.0.30000974",
-    "cross-env": "^5.1.4",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.6.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-config-standard-react": "^6.0.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-react-hooks": "^1.6.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "extend-shallow": "^3.0.2",
+    "cross-env": "5.1.4",
+    "eslint": "5.16.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-prettier": "3.6.0",
+    "eslint-config-standard": "11.0.0",
+    "eslint-config-standard-react": "6.0.0",
+    "eslint-plugin-import": "2.17.3",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-node": "7.0.1",
+    "eslint-plugin-promise": "4.1.1",
+    "eslint-plugin-react": "7.13.0",
+    "eslint-plugin-react-hooks": "1.6.0",
+    "eslint-plugin-standard": "3.1.0",
+    "extend-shallow": "3.0.2",
     "generate-random-data": "0.0.3",
-    "gh-pages": "^1.2.0",
-    "jest": "^24.8.0",
-    "jest-css-modules": "^2.1.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1",
-    "react-select": "^3.0.3",
-    "react-test-renderer": "^16.8.6",
-    "react-testing-library": "^8.0.1",
-    "react-virtualized": "^9.21.1",
-    "rollup": "^1.15.6",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-babel-minify": "^7.0.0",
-    "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-gzip": "^2.2.0",
-    "rollup-plugin-node-resolve": "^4.2.4",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-url": "^2.2.2"
+    "gh-pages": "1.2.0",
+    "jest": "24.8.0",
+    "jest-css-modules": "2.1.0",
+    "prop-types": "15.7.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-scripts": "3.0.1",
+    "react-select": "3.0.4",
+    "react-test-renderer": "16.8.6",
+    "react-testing-library": "8.0.1",
+    "react-virtualized": "9.21.1",
+    "rollup": "1.15.6",
+    "rollup-plugin-babel": "4.3.2",
+    "rollup-plugin-babel-minify": "7.0.0",
+    "rollup-plugin-commonjs": "9.3.4",
+    "rollup-plugin-gzip": "2.2.0",
+    "rollup-plugin-node-resolve": "4.2.4",
+    "rollup-plugin-peer-deps-external": "2.2.0",
+    "rollup-plugin-postcss": "2.0.3",
+    "rollup-plugin-replace": "2.2.0",
+    "rollup-plugin-url": "2.2.2"
   },
   "files": [
     "dist"
@@ -92,10 +92,10 @@
     }
   },
   "peerDependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-virtualized": "^9.21.1",
-    "react-select": "^3.0.4"
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-virtualized": "9.21.1",
+    "react-select": "3.0.4"
   },
   "dependencies": {
     "react-hover-observer": "2.1.1"
