--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-select-virtualized",
-  "version": "2.0.9",
+  "version": "2.0.10",
   "description": "react-select v3 + react-virtualized + react hooks",
   "author": "guiyep",
   "license": "MIT",
@@ -75,6 +75,7 @@
     "rollup": "1.15.6",
     "rollup-plugin-babel": "4.3.2",
     "rollup-plugin-babel-minify": "7.0.0",
+    "rollup-plugin-cleaner": "^1.0.0",
     "rollup-plugin-commonjs": "9.3.4",
     "rollup-plugin-gzip": "2.2.0",
     "rollup-plugin-node-resolve": "4.2.4",
