--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     "production": {
       "presets": ["minify"],
       "plugins": [
+        ["@babel/plugin-transform-runtime"],
         [
           "transform-react-remove-prop-types",
           {
