--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
-    "@babel/plugin-external-helpers": "7.2.0",
+    "@babel/plugin-transform-runtime": "7.5.5",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "7.0.0",
     "@storybook/addon-actions": "5.1.9",
@@ -82,6 +82,7 @@
     "rollup-plugin-peer-deps-external": "2.2.0",
     "rollup-plugin-postcss": "2.0.3",
     "rollup-plugin-replace": "2.2.0",
+    "rollup-plugin-terser": "5.1.1",
     "rollup-plugin-url": "2.2.2"
   },
   "files": [
