--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/plugin-transform-runtime": "7.5.5",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "7.0.0",
+    "@dump247/storybook-state": "^1.6.1",
     "@storybook/addon-actions": "5.1.9",
     "@storybook/addon-info": "5.1.9",
     "@storybook/addon-links": "5.1.9",
