adding github apps

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,6 @@
 {
-  "extends": [
-    "config:base"
-  ]
+  "extends": ["config:base"],
+  "baseBranches": ["develop"],
+  "schedule": ["before 5:00am"],
+  "timezone": "AEST"
 }
