removing timezone renovate

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,5 @@
 {
   "extends": ["config:base"],
   "baseBranches": ["develop"],
-  "schedule": ["before 5:00am"],
-  "timezone": "AEST"
+  "schedule": ["before 5:00am"]
 }
