--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-select-virtualized",
-  "version": "2.3.0",
+  "version": "2.3.2",
   "description": "Select virtualized component using: react-select v3 + react-virtualized + react hooks",
   "author": "guiyep",
   "license": "MIT",
   "repository": "guiyep/react-select-virtualized",
   "main": "dist/index.min.js",
   "module": "dist/index.min.es.js",
-  "jsnext:main": "dist/index.es.js",
+  "jsnext:main": "dist/index.min.es.js",
   "engines": {
     "node": ">=9",
     "npm": ">=6"
