--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-select-virtualized",
-  "version": "2.3.12",
+  "version": "2.3.13",
   "description": "Select virtualized component using: react-select v3 + react-virtualized + react hooks",
   "author": "guiyep",
   "license": "MIT",
@@ -95,5 +95,8 @@
     "react-dom": "16.12.0",
     "react-virtualized": "9.21.2",
     "react-select": "3.0.8"
+  },
+  "dependencies": {
+    "lodash.debounce": "^4.0.8"
   }
 }
