--- a/renovate.json
+++ b/renovate.json
@@ -2,10 +2,16 @@
   "extends": ["config:base"],
   "baseBranches": ["develop"],
   "schedule": ["before 5:00am"],
-  "packageRules": [
-    {
-      "updateTypes": ["minor", "patch", "pin", "digest"],
-      "automerge": true
-    }
-  ]
+  "minor": {
+    "automerge": true
+  },
+  "patch": {
+    "automerge": true
+  },
+  "pin": {
+    "automerge": true
+  },
+  "digest": {
+    "automerge": true
+  }
 }
