--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-select-virtualized",
-  "version": "2.5.11",
-  "description": "Select virtualized component using: react-select v3 + react-virtualized + react hooks",
+  "version": "3.0.0",
+  "description": "Select virtualized component using: react-select v4 + react-virtualized + react hooks",
   "author": "guiyep",
   "license": "MIT",
   "repository": "guiyep/react-select-virtualized",
@@ -29,56 +29,56 @@
     "build-storybook": "build-storybook -c .storybook"
   },
   "devDependencies": {
-    "@babel/core": "7.11.1",
-    "@babel/plugin-transform-runtime": "7.11.0",
-    "@babel/preset-env": "7.11.0",
-    "@babel/preset-react": "7.10.4",
+    "@babel/core": "7.12.13",
+    "@babel/plugin-transform-runtime": "7.12.15",
+    "@babel/preset-env": "7.12.13",
+    "@babel/preset-react": "7.12.13",
     "@dump247/storybook-state": "1.6.1",
-    "@storybook/addon-actions": "6.0.12",
-    "@storybook/addon-info": "5.3.19",
-    "@storybook/addon-links": "6.0.12",
-    "@storybook/addons": "6.0.12",
-    "@storybook/react": "6.0.12",
+    "@storybook/addon-actions": "6.1.17",
+    "@storybook/addon-info": "5.3.21",
+    "@storybook/addon-links": "6.1.17",
+    "@storybook/addons": "6.1.17",
+    "@storybook/react": "6.1.17",
     "babel-eslint": "10.1.0",
-    "babel-loader": "8.1.0",
+    "babel-loader": "8.2.2",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "babel-preset-minify": "0.5.1",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb": "18.2.0",
-    "eslint-config-prettier": "6.10.1",
-    "eslint-config-standard": "14.1.1",
-    "eslint-config-standard-react": "9.2.0",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint": "7.19.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-prettier": "7.2.0",
+    "eslint-config-standard": "16.0.2",
+    "eslint-config-standard-react": "11.0.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.20.6",
-    "eslint-plugin-react-hooks": "3.0.0",
-    "eslint-plugin-standard": "4.0.1",
+    "eslint-plugin-promise": "4.3.1",
+    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-standard": "5.0.0",
     "extend-shallow": "3.0.2",
     "generate-random-data": "0.0.3",
-    "jest": "25.2.7",
+    "jest": "26.6.3",
     "jest-css-modules": "2.1.0",
     "prop-types": "15.7.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-select": "3.1.0",
-    "react-test-renderer": "16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-select": "4.1.0",
+    "react-test-renderer": "17.0.1",
     "react-testing-library": "8.0.1",
-    "react-virtualized": "9.22.2",
-    "rollup": "2.23.1",
+    "react-virtualized": "9.22.3",
+    "rollup": "2.38.5",
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-babel-minify": "10.0.0",
     "rollup-plugin-cleaner": "1.0.0",
     "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-gzip": "2.3.0",
+    "rollup-plugin-gzip": "2.5.0",
     "rollup-plugin-import-alias": "1.0.10",
     "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-peer-deps-external": "2.2.3",
-    "rollup-plugin-postcss": "2.5.0",
+    "rollup-plugin-peer-deps-external": "2.2.4",
+    "rollup-plugin-postcss": "4.0.0",
     "rollup-plugin-replace": "2.2.0",
-    "rollup-plugin-terser": "7.0.0"
+    "rollup-plugin-terser": "7.0.2"
   },
   "files": [
     "dist"
@@ -91,8 +91,8 @@
   "peerDependencies": {
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-virtualized": "9.22.2",
-    "react-select": "3.1.0"
+    "react-select": "4.1.0",
+    "react-virtualized": "9.22.2"
   },
   "dependencies": {
     "lodash.debounce": "4.0.8"
