--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,14 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": { "version": "3.8", "proposals": true }
+      }
+    ],
+    "@babel/preset-react"
+  ],
   "env": {
     "production": {
       "presets": ["minify"],
