--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-loader": "8.2.2",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "babel-preset-minify": "0.5.1",
+    "core-js": "3.8",
     "eslint": "7.19.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "7.2.0",
@@ -59,6 +60,7 @@
     "generate-random-data": "0.0.3",
     "jest": "26.6.3",
     "jest-css-modules": "2.1.0",
+    "postcss": "^8.3.5",
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
