--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-select-virtualized",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "description": "Select virtualized component using: react-select v4 + react-virtualized + react hooks",
   "author": "guiyep",
   "license": "MIT",
@@ -98,5 +98,9 @@
   },
   "dependencies": {
     "lodash.debounce": "4.0.8"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "not ie <= 11"
+  ]
 }
