--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "react-virtualized": "9.22.2"
   },
   "dependencies": {
-    "lodash.debounce": "4.0.8"
+    "lodash.debounce": "4.0.8",
+    "regenerator-runtime": "^0.13.7"
   }
 }
