--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": [
-    ["@babel/preset-env", { "useBuiltIns": "usage", "corejs": { "version": "3.15", "proposals": true } }],
+    "@babel/preset-env",
     "@babel/preset-react"
   ],
   "env": {
