--- a/package.json
+++ b/package.json
@@ -91,10 +91,10 @@
     }
   },
   "peerDependencies": {
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-select": "5.1.0",
-    "react-virtualized": "9.22.3"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-select": "^5.1.0",
+    "react-virtualized": "^9.22.3"
   },
   "dependencies": {
     "lodash.debounce": "4.0.8",
