--- a/.eslintrc
+++ b/.eslintrc
@@ -8,36 +8,34 @@
   },
   "plugins": ["prettier", "react", "react-hooks"],
   "rules": {
-    "prettier/prettier": [
-      "error",
-      {
-        "printWidth": 120,
-        "singleQuote": true,
-        "trailingComma": "all",
-        "arrowParens": "always"
-      }
-    ],
+    "prettier/prettier": "error",
+
     "eol-last": ["error", "always"],
+    "no-plusplus": "off",
+
     "import/prefer-default-export": "off",
     "import/no-unresolved": "off",
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+
+    "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/mouse-events-have-key-events": "off",
+
+    "prefer-arrow-callback": "error",
+    "no-use-before-define": "off",
+    "prefer-destructuring": "off",
+
+    "react/prop-types": [2, { "skipUndeclared": true }],
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "error",
     "react/destructuring-assignment": "off",
     "react/forbid-prop-types": "off",
     "react/jsx-wrap-multilines": "off",
     "react/no-unused-prop-types": "off",
     "react/no-array-index-key": "off",
     "react/jsx-one-expression-per-line": "off",
-    "react/sort-comp": [
-      2,
-      {
-        "order": ["static-methods", "lifecycle", "everything-else", "render"]
-      }
-    ],
-    "react/prop-types": [2, { "skipUndeclared": true }],
-    "jsx-a11y/click-events-have-key-events": "off",
-    "no-use-before-define": "off",
-    "prefer-destructuring": "off",
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "error"
+    "react/require-default-props": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/function-component-definition": "off"
   }
 }
