--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-select-virtualized",
-  "version": "4.2.0",
+  "version": "4.2.1",
   "description": "Select virtualized component using: react-select v4 + react-virtualized + react hooks",
   "author": "guiyep",
   "license": "MIT",
@@ -26,70 +26,76 @@
     "start": "rollup -c -w",
     "deploy": "gh-pages -d",
     "storybook": "start-storybook -p 9009",
-    "build-storybook": "build-storybook -c .storybook"
+    "build-storybook": "build-storybook -c .storybook",
+    "prepare": "husky install",
+    "lint": "yarn run eslint ./src/**/**/*.{js,jsx} && yarn run prettier ./src",
+    "eslint": "eslint --fix",
+    "prettier": "prettier --write",
+    "eslint2": "eslint",
+    "prettier2": "prettier",
+    "lint-s": "lint-staged"
   },
   "devDependencies": {
-    "@babel/core": "7.15.8",
-    "@babel/plugin-transform-runtime": "7.15.8",
-    "@babel/preset-env": "7.15.8",
-    "@babel/preset-react": "7.14.5",
+    "@applitools/eyes-storybook": "^3.27.1",
+    "@babel/core": "7.16.5",
+    "@babel/plugin-transform-runtime": "7.16.5",
+    "@babel/preset-env": "7.16.5",
+    "@babel/preset-react": "7.16.5",
     "@dump247/storybook-state": "1.6.1",
-    "@storybook/addon-actions": "6.3.12",
+    "@storybook/addon-actions": "6.4.9",
     "@storybook/addon-info": "5.3.21",
-    "@storybook/addon-links": "6.3.12",
-    "@storybook/addons": "6.3.12",
-    "@storybook/react": "6.3.12",
+    "@storybook/addon-links": "6.4.9",
+    "@storybook/addons": "6.4.9",
+    "@storybook/react": "6.4.9",
     "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.2",
+    "babel-loader": "8.2.3",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "babel-preset-minify": "0.5.1",
-    "core-js": "3.18.3",
-    "eslint": "8.0.1",
-    "eslint-config-airbnb": "18.2.1",
+    "core-js": "3.20.0",
+    "eslint": "8.5.0",
+    "eslint-config-airbnb": "19.0.2",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-standard": "16.0.3",
     "eslint-config-standard-react": "11.0.1",
-    "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "5.1.0",
-    "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-react": "7.27.1",
+    "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-standard": "5.0.0",
     "extend-shallow": "3.0.2",
     "generate-random-data": "0.0.3",
-    "jest": "27.3.0",
+    "husky": "7.0.1",
+    "jest": "27.4.5",
     "jest-css-modules": "2.1.0",
-    "postcss": "^8.3.9",
+    "lint-staged": "11.0.0",
+    "postcss": "^8.4.5",
+    "prettier": "2.3.2",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-select": "5.1.0",
-    "react-test-renderer": "17.0.2",
+    "react-select": "5.2.1",
     "react-testing-library": "8.0.1",
     "react-virtualized": "9.22.3",
-    "rollup": "2.58.0",
+    "rollup": "2.61.1",
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-babel-minify": "10.0.0",
     "rollup-plugin-cleaner": "1.0.0",
     "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-gzip": "2.5.0",
+    "rollup-plugin-gzip": "3.0.0",
     "rollup-plugin-import-alias": "1.0.10",
     "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
-    "rollup-plugin-postcss": "4.0.1",
+    "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-replace": "2.2.0",
-    "rollup-plugin-terser": "7.0.2"
+    "rollup-plugin-terser": "7.0.2",
+    "eslint-plugin-prettier": "^4.0.0"
   },
   "files": [
     "dist"
   ],
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(css|less|scss|sss|style)$": "<rootDir>/node_modules/jest-css-modules"
-    }
-  },
   "peerDependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -106,5 +112,11 @@
     "not opera >= 0",
     "not opera >= 0",
     "not ie <= 11"
-  ]
+  ],
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "yarn run prettier",
+      "yarn run eslint"
+    ]
+  }
 }
