--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "prettier": "prettier --write",
     "eslint2": "eslint",
     "prettier2": "prettier",
-    "lint-s": "lint-staged"
+    "lint-s": "lint-staged",
+    "eyes-storybook": "eyes-storybook"
   },
   "devDependencies": {
     "@applitools/eyes-storybook": "^3.27.1",
@@ -60,12 +61,13 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.27.1",
     "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-standard": "5.0.0",
     "extend-shallow": "3.0.2",
-    "generate-random-data": "0.0.3",
+    "faker": "^5.5.3",
     "husky": "7.0.1",
     "jest": "27.4.5",
     "jest-css-modules": "2.1.0",
@@ -90,8 +92,7 @@
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-replace": "2.2.0",
-    "rollup-plugin-terser": "7.0.2",
-    "eslint-plugin-prettier": "^4.0.0"
+    "rollup-plugin-terser": "7.0.2"
   },
   "files": [
     "dist"
