--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "eslint2": "eslint",
     "prettier2": "prettier",
     "lint-s": "lint-staged",
-    "eyes-storybook": "eyes-storybook"
+    "eyes-storybook": "eyes-storybook",
+    "audit-fix": "yarn-audit-fix"
   },
   "devDependencies": {
     "@applitools/eyes-storybook": "^3.27.1",
@@ -92,7 +93,8 @@
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-replace": "2.2.0",
-    "rollup-plugin-terser": "7.0.2"
+    "rollup-plugin-terser": "7.0.2",
+    "yarn-audit-fix": "^9.0.4"
   },
   "files": [
     "dist"
