--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "license": "MIT",
   "repository": "guiyep/react-select-virtualized",
   "main": "dist/index.min.js",
+  "engines": {
+    "node": ">=12",
+    "npm": ">=7"
+  },
   "keywords": [
     "react",
     "select",
