--- a/package.json
+++ b/package.json
@@ -40,8 +40,6 @@
   "devDependencies": {
     "@applitools/eyes-storybook": "^3.27.2",
     "@babel/core": "7.16.7",
-    "@babel/plugin-transform-runtime": "7.16.7",
-    "@babel/preset-env": "7.16.7",
     "@babel/preset-react": "7.16.7",
     "@dump247/storybook-state": "1.6.1",
     "@storybook/addon-actions": "6.4.9",
@@ -106,16 +104,8 @@
     "react-virtualized": "^9.22.3"
   },
   "dependencies": {
-    "lodash.debounce": "4.0.8",
-    "regenerator-runtime": "^0.13.9"
+    "lodash.debounce": "4.0.8"
   },
-  "browserslist": [
-    "last 2 versions",
-    "not ie <= 11",
-    "not opera >= 0",
-    "not opera >= 0",
-    "not ie <= 11"
-  ],
   "lint-staged": {
     "*.{js,jsx}": [
       "yarn run prettier",
