--- a/.babelrc
+++ b/.babelrc
@@ -15,6 +15,12 @@
           }
         ]
       ]
+    },
+    "test": {
+      "presets": [
+        "@babel/preset-env",
+        "@babel/preset-react"
+      ]
     }
   }
 }
