--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-select-virtualized",
-  "version": "5.1.0",
+  "version": "5.1.1",
   "description": "Select virtualized component using: react-select v4 + react-virtualized + react hooks",
   "author": "guiyep",
   "license": "MIT",
@@ -35,6 +35,7 @@
     "prettier2": "prettier",
     "lint-s": "lint-staged",
     "eyes-storybook": "eyes-storybook",
+    "bundle-size": "node ./bundlesize.js",
     "audit-fix": "yarn-audit-fix"
   },
   "devDependencies": {
@@ -69,6 +70,7 @@
     "eslint-plugin-standard": "5.0.0",
     "extend-shallow": "3.0.2",
     "faker": "^5.5.3",
+    "filesize": "^8.0.6",
     "husky": "7.0.4",
     "jest": "27.4.6",
     "jest-css-modules": "2.1.0",
