--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "start": "rollup -c -w",
     "deploy": "gh-pages -d",
     "storybook": "start-storybook -p 9009",
-    "build-storybook": "build-storybook -c .storybook",
+    "build-storybook": "build-storybook",
     "prepare": "husky install",
     "lint": "yarn run eslint ./src/**/**/*.{js,jsx} && yarn run prettier ./src",
     "eslint": "eslint --fix",
@@ -45,9 +45,11 @@
     "@babel/preset-react": "7.18.6",
     "@dump247/storybook-state": "1.6.1",
     "@storybook/addon-actions": "6.5.14",
+    "@storybook/addon-essentials": "^6.5.14",
     "@storybook/addon-info": "5.3.21",
     "@storybook/addon-links": "6.5.14",
     "@storybook/addons": "6.5.14",
+    "@storybook/builder-webpack5": "6.5.14",
     "@storybook/react": "6.5.14",
     "babel-eslint": "10.1.0",
     "babel-loader": "9.1.0",
@@ -61,7 +63,7 @@
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
