--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "start": "rollup -c -w",
     "deploy": "gh-pages -d",
     "storybook": "start-storybook -p 9009",
-    "build-storybook": "build-storybook",
+    "build-storybook": "build-storybook --config-dir .storybook",
     "prepare": "husky install",
     "lint": "yarn run eslint ./src/**/**/*.{js,jsx} && yarn run prettier ./src",
     "eslint": "eslint --fix",
@@ -50,6 +50,7 @@
     "@storybook/addon-links": "6.5.14",
     "@storybook/addons": "6.5.14",
     "@storybook/builder-webpack5": "6.5.14",
+    "@storybook/manager-webpack5": "^6.5.14",
     "@storybook/react": "6.5.14",
     "babel-eslint": "10.1.0",
     "babel-loader": "9.1.0",
